--- a/RHEL/Manage_Linux_Services.yml
+++ b/RHEL/Manage_Linux_Services.yml
@@ -4,7 +4,7 @@
   gather_facts: False
 
   tasks:
-    - name: Ansible Tower {{ service_action}} {{ service_name }} services
+    - name: Ansible Tower "{{ service_action }}" "{{ service_name }}" services
       service:
-          name: {{ service_name }}
-          state: {{ service_action }}
+        name: "{{ service_name }}"
+        state: "{{ service_action }}"
