--- a/WINDOWS/Update_Windows.yml
+++ b/WINDOWS/Update_Windows.yml
@@ -4,7 +4,7 @@
   tasks:
     - block:
 
-        - name: check for missing updates.
+        - name: Check for missing updates
           win_updates:
             state: searched
           register: update_count
