Register CNAME DNS record on Windows DNS server

--- a/WINDOWS/add_windows_cnamerr.yml
+++ b/WINDOWS/add_windows_cnamerr.yml
@@ -1,5 +1,5 @@
 ---
-- name: Register CNAME DNS record on Windows DNS server
+- name: Register CNAME DNS record on Windows DNS server.
   hosts: DNSServername
   gather_facts: False
   vars:
