VMware take host snapshot

--- a/WINDOWS/install_windows_iis.yml
+++ b/WINDOWS/install_windows_iis.yml
@@ -1,9 +1,11 @@
 ---
-- name: Install IIS
+- name: Install or remove IIS
   hosts: all
+  vars:
+    iis_state: '' # "present"=install ; "absent"=uninstall 
 
   tasks:
-    - name: Install IIS
+    - name: {{ iis_state }} IIS Web Server
       win_feature:
         name: Web-Server
-        state: present
+        state: {{ iis_state }}
