--- a/MYSQL/backup_mysql_db.yml
+++ b/MYSQL/backup_mysql_db.yml
@@ -6,8 +6,9 @@
     file_name: ''
     db_name: '' # type "all" to back them all
 
-- name: Dump all databases to {{ file_name }}.sql
-  mysql_db:
-    state: dump
-    name: {{ db_name }}
-    target: /tmp/{{ file_name }}.sql
+  tasks:
+    - name: Dump all databases to {{ file_name }}.sql
+      mysql_db:
+        state: dump
+        name: {{ db_name }}
+        target: /tmp/{{ file_name }}.sql
