Adding backup MySQL DB using shell and mysqlbackup

--- a/MYSQL/backup_mysqldump_db.yml
+++ b/MYSQL/backup_mysqldump_db.yml
@@ -1,5 +1,5 @@
 ---
-- name: Backup MySQL DBs using shell and mysqlbackup
+- name: Backup MySQL DBs using shell and mysqlbackup.
   hosts: mysql
   gather_facts: false
   vars:
