--- a/F5/add_nodes.yml
+++ b/F5/add_nodes.yml
@@ -3,6 +3,13 @@
   hosts: lb
   connection: local
   gather_facts: false
+  vars:
+    ansible_host: ''
+    ansible_user: ''
+    ansible_ssh_pass: ''
+    tcp_port: ''
+    state: ''
+    
 
   tasks:
 
@@ -12,7 +19,7 @@
         server: "{{ansible_host}}"
         user: "{{ansible_user}}"
         password: "{{ansible_ssh_pass}}"
-        server_port: 8443
+        server_port: "{{ tcp_port }}" # 443 for on-prem. Must be 8443 in public cloud
         validate_certs: false
       host: "{{hostvars[item].ansible_host}}"
       state: "{{state}}"
