--- a/WINDOWS/run_windows_netstat.yml
+++ b/WINDOWS/run_windows_netstat.yml
@@ -1,6 +1,7 @@
 ---
 - name: Test cmd from win_command module
   hosts: mywindows
+  gather_facts: False
 
   tasks:
     - name: Run netstat and return Ethernet stats to variable.
