Junos Gather facts

--- a/NETWORK/JUNIPER/Junos_gather_facts.yml
+++ b/NETWORK/JUNIPER/Junos_gather_facts.yml
@@ -7,7 +7,7 @@
   gather_facts: false
 
   tasks:
-    - name: Checking NETCONF connectivity
+    - name: Checking NETCONF connectivity.
       wait_for: 
         host: "{{ ansible_hostname }}"
         port: 830 
