--- a/WINDOWS/add_windows_cnamerr.yml
+++ b/WINDOWS/add_windows_cnamerr.yml
@@ -3,14 +3,14 @@
   hosts: DNSServername
   gather_facts: False
   vars:
-    device_hostname: ''
-    target_hostname: ''
-    DNS_domain: ''
+    device_hostname: ""
+    target_hostname: ""
+    DNS_domain: ""
 
   tasks:
   - name: Create database CNAME hostname alias
     win_dns_record:
-      name: {{ device_hostname }}
+      name: "{{ device_hostname }}"
       type: "CNAME"
-      value: {{ target_hostname }}
-      zone: {{ DNS_domain }}
+      value: "{{ target_hostname }}"
+      zone: "{{ DNS_domain }}"
