--- a/MYSQL/dump_mysql_db.yml
+++ b/MYSQL/dump_mysql_db.yml
@@ -3,12 +3,12 @@
   hosts: mysql
   gather_facts: false
   vars:
-    file_name: ''
-    db_name: '' # type "all" to restore them all
+    file_name: ""
+    db_name: "" # type "all" to restore them all
 
   tasks:
-    - name: Dump database from {{ file_name }}.sql
+    - name: Dump database from "{{ file_name }}".sql
       mysql_db:
-        name: {{ db_name }}
+        name: "{{ db_name }}"
         state: dump
-        target: /tmp/{{ file_name }}.sql
+        target: /tmp/"{{ file_name }}".sql
