--- a/VMWARE/create_cluster.yml
+++ b/VMWARE/create_cluster.yml
@@ -4,20 +4,20 @@
   connection: local
   gather_facts: no
   vars:
-    vcenter_hostname: ''
-    vcenter_username: ''
-    vcenter_password: ''
-    datacenter_name: ''
-    datacenter_cluster_name: ''
-    state: ''
+    vcenter_hostname: ""
+    vcenter_username: ""
+    vcenter_password: ""
+    datacenter_name: ""
+    datacenter_cluster_name: ""
+    state: ""
 
   tasks:
    - name: Create datastore cluster
      vmware_datastore_cluster:
-       hostname: '{{ vcenter_hostname }}'
-       username: '{{ vcenter_username }}'
-       password: '{{ vcenter_password }}'
-       datacenter_name: '{{ datacenter_name }}'
-       datastore_cluster_name: '{{ datastore_cluster_name }}'
-       state: "{{ state }}"
+       hostname: "{{ vcenter_hostname }}"
+       username: "{{ vcenter_username }}"
+       password: "{{ vcenter_password }}"
+       datacenter_name: "{{ datacenter_name }}"
+       datastore_cluster_name: "{{ datastore_cluster_name }}"
+       state: {{ state }}"
      delegate_to: localhost
