Take VMWare host snapshot

--- a/VMWARE/take_vmware_host_snapshot.yml
+++ b/VMWARE/take_vmware_host_snapshot.yml
@@ -20,6 +20,6 @@
         folder: "/{{ datacenter_name }}/vm/"
         name: "{{ guest_name }}"
         state: present
-        snapshot_name: {{ snapshot_name }}
-        description: {{ snapshot_description }}
+        snapshot_name: "{{ snapshot_name }}"
+        description: "{{ snapshot_description }}"
       delegate_to: localhost
