--- a/VMWARE/take_vmware_host_snapshot.yml
+++ b/VMWARE/take_vmware_host_snapshot.yml
@@ -2,13 +2,13 @@
 - name: Take VMWare host snapshot
   hosts: vmwarehost
   vars:
-    guest_name: ''
-    vcenter_hostname: ''
-    vcenter_username: ''
-    vcenter_password: ''
-    datacenter_name: ''
-    snapshot_name: ''
-    snapshot_description: ''
+    guest_name: ""
+    vcenter_hostname: ""
+    vcenter_username: ""
+    vcenter_password: ""
+    datacenter_name: ""
+    snapshot_name: ""
+    snapshot_description: ""
     
   tasks:
     - name: Create {{ guest_name }} snapshot
