Adding NetApps create volume

--- a/WINDOWS/install_windows_iis.yml
+++ b/WINDOWS/install_windows_iis.yml
@@ -2,10 +2,10 @@
 - name: Install or remove IIS
   hosts: all
   vars:
-    iis_state: '' # "present"=install ; "absent"=uninstall 
+    iis_state: "" # "present"=install ; "absent"=uninstall 
 
   tasks:
-    - name: {{ iis_state }} IIS Web Server
+    - name: "{{ iis_state }}" IIS Web Server
       win_feature:
         name: Web-Server
-        state: {{ iis_state }}
+        state: "{{ iis_state }}"
