--- a/F5/add_nodes.yml
+++ b/F5/add_nodes.yml
@@ -12,7 +12,7 @@
     bigip_node:
       provider:
         server: "{{ansible_host}}"
-        server_port: "{{ tcp_port }}" # 443 for on-prem. Must be 8443 in public cloud
+        server_port: 8443 #"{{ tcp_port }}" # 443 for on-prem. Must be 8443 in public cloud
         validate_certs: false
       host: "{{hostvars[item].ansible_host}}"
       state: "{{state}}"
