--- a/F5/add_nodes.yml
+++ b/F5/add_nodes.yml
@@ -12,6 +12,8 @@
     bigip_node:
       provider:
         server: "{{ansible_host}}"
+        user: "{{ansible_user}}"
+        password: "{{ansible_ssh_pass}}"
         server_port: 8443 #"{{ tcp_port }}" # 443 for on-prem. Must be 8443 in public cloud
         validate_certs: false
       host: "{{hostvars[item].ansible_host}}"
