--- a/F5/bigip_pool.yml
+++ b/F5/bigip_pool.yml
@@ -9,9 +9,7 @@
   - name: CREATE POOL
     bigip_pool:
       provider:
-        server: "{{ansible_host}}"
-        #user: "{{ansible_user}}"
-        #password: "{{ansible_ssh_pass}}"
+        server: "{{ansible_host}}"s
         server_port: 8443
         validate_certs: false
       name: "http_pool"
