--- a/F5/bigip_pool.yml
+++ b/F5/bigip_pool.yml
@@ -10,6 +10,8 @@
     bigip_pool:
       provider:
         server: "{{ansible_host}}"
+        user: "{{ansible_user}}"
+        password: "{{ansible_ssh_pass}}"
         server_port: 8443
         validate_certs: false
       name: "http_pool"
