--- a/PALO ALTO/configure_ether_temp.yml
+++ b/PALO ALTO/configure_ether_temp.yml
@@ -13,7 +13,7 @@
         if_name: "ethernet1/1"
         zone_name: "untrust"
         create_default_route: "yes"
-        validate_certs: false
+        #validate_certs: false
         commit: False
 
     - name: set dns and ntp
@@ -22,7 +22,7 @@
         username: "{{admin_username}}"
         password: "{{admin_password}}"
         dns_server_primary: "8.8.8.8"
-        validate_certs: false
+        #validate_certs: false
         #ntp_server_primary: "0.us.pool.ntp.org"
         #ntp_server_secondary: "1.us.pool.ntp.org"
         #timezone: "US/Pacific"
