--- a/PALO ALTO/basic_networking_config.yml
+++ b/PALO ALTO/basic_networking_config.yml
@@ -57,8 +57,8 @@
         username: "{{admin_username}}"
         password: "{{admin_password}}"
         dns_server_primary: "8.8.8.8"
-        ntp_server_primary: "0.us.pool.ntp.org"
-        ntp_server_secondary: "1.us.pool.ntp.org"
-        timezone: "US/Pacific"
-        login_banner: "Secure environment"
+        #ntp_server_primary: "0.us.pool.ntp.org"
+        #ntp_server_secondary: "1.us.pool.ntp.org"
+        #timezone: "US/Pacific"
+        #login_banner: "Secure environment"
         commit: True
