--- a/PALO ALTO/basic_networking_config.yml
+++ b/PALO ALTO/basic_networking_config.yml
@@ -23,6 +23,9 @@
   connection: local
   gather_facts: False
 
+  roles:
+    - role: paloaltonetworks.paloaltonetworks
+
   tasks: 
 
    # - name: change user password using ssh protocol
