changed module name for admpwd

--- a/PALO ALTO/change_password.yml
+++ b/PALO ALTO/change_password.yml
@@ -9,7 +9,7 @@
   tasks: 
 
     - name: change user password using ssh protocol
-      paloaltonetworks.panos.panos_admpwd:
+      panos_admpwd:
         ip_address: "{{ mgmt_ip }}"
         username: "{{admin_username}}"
         newpassword: "{{admin_password}}"
