--- a/PALO ALTO/change_password.yml
+++ b/PALO ALTO/change_password.yml
@@ -10,7 +10,7 @@
 
     - name: change user password using ssh protocol
       panos_admpwd:
-        ip_address: "{{ mgmt_ip }}"
+        ip_address: "{{ ansible_host }}"
         username: "{{admin_username}}"
         newpassword: "{{admin_password}}"
         key_filename: "{{key_name}}"
