--- a/PALO ALTO/change_password.yml
+++ b/PALO ALTO/change_password.yml
@@ -13,4 +13,4 @@
         ip_address: "{{ ansible_host }}"
         username: "{{ admin_username }}"
         newpassword: "{{ admin_password }}"
-        key_filename: /home/ec2-user/aws-west-ml.pem
+        key_filename: "/home/ec2-user/aws-west-ml.pem"
