--- a/PALO ALTO/change_password.yml
+++ b/PALO ALTO/change_password.yml
@@ -1,3 +1,8 @@
+# Cannot get this to work. I have the private key on Tower in the path described
+# No matter what permissions I put on the key file I get permission denied for the key
+# I have two credentials defined in my template. A machine cred with username, password and key
+# plus a tower credential.
+
 ---
 - hosts: all
   connection: local
