--- a/PALO ALTO/change_password.yml
+++ b/PALO ALTO/change_password.yml
@@ -19,3 +19,7 @@
         username: "{{ admin_username }}"
         newpassword: "{{ admin_password }}"
         key_filename: "/home/ec2-user/aws-west-ml.pem"
+      #register: result
+      #until: not result|failed
+      #retries: 10
+      #delay: 30
