--- a/PALO ALTO/get_system_info.yml
+++ b/PALO ALTO/get_system_info.yml
@@ -10,7 +10,8 @@
 
   - name: Get the system info
     panos_op:
-      provider: '{{ ansible_host }}'
+      provider:
+      ip_address: "{{ ansible_host }}"
       cmd: 'show system info'
     register: res
 
