--- a/WINDOWS/add_windows_dnsrr.yml
+++ b/WINDOWS/add_windows_dnsrr.yml
@@ -1,6 +1,6 @@
 ---
 - name: Register DNS record on Windows DNS server.
-  hosts: DNSServername
+  hosts: all
   gather_facts: False
   vars:
     device_hostname: ''
