--- a/WINDOWS/add_windows_dnsrr.yml
+++ b/WINDOWS/add_windows_dnsrr.yml
@@ -13,6 +13,6 @@
     win_dns_record:
       name:  myapp #"{{ device_hostname }}"
       type: "A"
-      value: 192.168.0.24 #"{{ IPAddress }}"
+      value: myapp.lowcher.local #"{{ IPAddress }}"
       state: present #"{{ state }}"
       zone: lowcher.local #"{{ DNS_domain }}"
