--- a/NETWORK/junos_gather_facts.yml
+++ b/NETWORK/junos_gather_facts.yml
@@ -19,16 +19,16 @@
         gather_subset: all
         gather_network_resources: all
 
-    - name: Checking NETCONF connectivity.
-      wait_for: 
-        host: "{{ ansible_hostname }}"
-        port: 830 
-        timeout: 5
+  #  - name: Checking NETCONF connectivity.
+  #    wait_for: 
+  #      host: "{{ ansible_hostname }}"
+  #      port: 830 
+  #      timeout: 5
 
-    - name: Retrieving information from devices running Junos OS
-      juniper_junos_facts:
-        host: "{{ ansible_hostname }}"
+  #  - name: Retrieving information from devices running Junos OS
+  #    juniper_junos_facts:
+  #      host: "{{ ansible_hostname }}"
 
-    - name: Print version
-      debug:
-        var: junos.version
+  #  - name: Print version
+  #    debug:
+  #      var: junos.version
