--- a/NETWORK/junos_gather_facts.yml
+++ b/NETWORK/junos_gather_facts.yml
@@ -5,7 +5,7 @@
  #   - juniper.junos 
   connection: local
   gather_facts: true
-  ansible_network_os: junos
+ # ansible_network_os: junos
 
   tasks:
   # - name: collect default set of facts
