--- a/NETWORK/junos_gather_facts.yml
+++ b/NETWORK/junos_gather_facts.yml
@@ -1,15 +1,11 @@
 ---
 - name: Get Device Facts
   hosts: rtr3
- # roles:
- #   - juniper.junos 
-  connection: local
   gather_facts: true
- # ansible_network_os: junos
 
   tasks:
-  # - name: collect default set of facts
-  #   junos_facts:
+    - name: collect default set of facts
+      junos_facts:
 
     - name: collect default set of facts and configuration
       junos_facts:
