--- a/NETWORK/junos_gather_facts.yml
+++ b/NETWORK/junos_gather_facts.yml
@@ -3,7 +3,7 @@
   hosts: all
   gather_facts: false
   connection: network_cli
-  ansible_network_os: 'junos'
+  #ansible_network_os: 'junos'
 
   tasks:
     - name: ENABLE NETCONF
