--- a/NETWORK/junos_facts.yml
+++ b/NETWORK/junos_facts.yml
@@ -2,7 +2,7 @@
 - name: Get JunoOS Facts
   hosts: all
   gather_facts: false
-  ansible_python_interpreter: /usr/bin/python3
+  connection: local
 
   tasks:
 
