--- a/NETWORK/ios_snmp_config.yml
+++ b/NETWORK/ios_snmp_config.yml
@@ -1,13 +1,13 @@
 ---
 - name: SNMP RO/RW STRING CONFIGURATION
-  hosts: cisco
+  hosts: all
   gather_facts: false
   connection: network_cli
   vars:
     snmp_ro_community: 'ansible-public'
     snmp_rw_community: 'ansible-private'
 
-  tasks:
+tasks:
 
   - name: ENSURE THAT THE DESIRED SNMP STRINGS ARE PRESENT 
     ios_config:
