--- a/NETWORK/ios_snmp_config.yml
+++ b/NETWORK/ios_snmp_config.yml
@@ -3,6 +3,7 @@
   hosts: all
   gather_facts: false
   connection: network_cli
+  ansible_network_os: ios
   vars:
     snmp_ro_community: 'ansible-public'
     snmp_rw_community: 'ansible-private'
