--- a/WINDOWS/display_DNS_param.yml
+++ b/WINDOWS/display_DNS_param.yml
@@ -7,7 +7,7 @@
     - name: Displaying current value for DNS parameters
       win_reg_stat:
         path: HKLM:\\SYSTEM\CurrentControlSet\Services\DNS\Parameters\CurrentVersion
-        name: TcpReceivePacketSize
+        #name: TcpReceivePacketSize
       register: current_value
     - debug:
-        msg: "This is '{{current_value}}'"
+        msg: "This is the '{{current_value}}'"
